--- a/!Games/Tetris/index.html
+++ b/!Games/Tetris/index.html
@@ -1,14 +1,27 @@
-<!doctype html>
+<ewqr!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Expanding Cards</title>
+	<title>Tetris</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" href="app.css">
 </head>
 <body>
+
+<div class="game">
+	<div class="left">
+		<canvas id="tetris" class="tetris" width="240px" height="400px"></canvas>
+	</div>
+	<div class="right">
+		<div class="score">Score: <span id="score">0</span></div>
+		<div>
+			<h3>Next up</h3>
+			<canvas id="nextPiece" class="next__piece" width="160px" height="160px"></canvas>
+		</div>
+	</div>
+</div>
 
 <script type="text/javascript" src="app.js" defer></script>
 </body>
