--- a/GenerativeArt/Flowers/index.html
+++ b/GenerativeArt/Flowers/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Expanding Cards</title>
+	<title>Generative Art</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" href="app.css">
 </head>
 <body>
-
+<canvas id="canvas--001"></canvas>
 <script type="text/javascript" src="app.js" defer></script>
 </body>
 </html>
