--- a/TextScroller/index.html
+++ b/TextScroller/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 
-<script type="text/javascript" src="app.js" defer></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
